# WaveSync

./: build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  (+2 more)
app/src/main/cpp/: CMakeLists.txt  config.h  opus_encoder.cpp
app/src/main/cpp/opus/: build_opus.sh
app/src/main/cpp/opus/android-build-arm64-v8a/: Makefile  config.h  config.status  libtool  opus-uninstalled.pc
app/src/main/cpp/opus/android-build-arm64-v8a/.libs/: libopus.la  libopus.lai
app/src/main/cpp/opus/android-build-arm64-v8a/celt/: celt.lo  celt_encoder.lo  cwrs.lo  kiss_fft.lo  mathops.lo  vq.lo
app/src/main/cpp/opus/android-build-arm64-v8a/doc/: Makefile
app/src/main/cpp/opus/android-build-arm64-v8a/silk/: HP_variable_cutoff.lo  LPC_inv_pred_gain.lo  LP_variable_cutoff.lo  NLSF_VQ_weights_laroia.lo  NLSF_decode.lo  NLSF_encode.lo  NLSF_stabilize.lo  NLSF_unpack.lo  PLC.lo  VQ_WMat_EC.lo  ana_filt_bank_1.lo  bwexpander_32.lo  code_signs.lo  control_SNR.lo  control_audio_bandwidth.lo  debug.lo  decode_pulses.lo  enc_API.lo  encode_indices.lo  interpolate.lo  process_NLSFs.lo  quant_LTP_gains.lo  resampler.lo  resampler_down2.lo  resampler_private_AR2.lo  resampler_private_IIR_FIR.lo  resampler_private_down_FIR.lo  resampler_rom.lo  shell_coder.lo  sort.lo  stereo_LR_to_MS.lo  stereo_encode_pred.lo  stereo_find_predictor.lo  table_LSF_cos.lo  tables_gain.lo
app/src/main/cpp/opus/android-build-arm64-v8a/src/: extensions.lo  mapping_matrix.lo  mlp.lo  opus.lo  opus_multistream.lo
app/src/main/cpp/opus/android-build-armeabi-v7a/: Makefile  config.h  config.status  libtool
app/src/main/cpp/opus/android-build-armeabi-v7a/.libs/: libarmasm.la  libopus.la  libopus.lai
(+574 files in other folders)
